--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link">главная</a>
+            <a class="header__link header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#0">посмотреть лоты</a>
@@ -48,82 +48,82 @@
     <main>
       <section class="cover">
         <div class="overlay"></div>
+
         <h1 class="cover__title">
-          <span class="aligned-text"
+          <span class="aligned-text aligned-text-content"
             >о<span class="letter-spacing-extended">но</span></span>
-          <span class="aligned-text_center"
+          <span class="aligned-text_center aligned-text-content"
             >те<span class="letter-spacing-extended">бе</span></span>
-          <span class="aligned-text_right"
+          <span class="aligned-text_right aligned-text-content"
             ><span class="letter-spacing-extended">н</span>адо</span>
         </h1>
 
-        <h2>
-          <span class="cover__description">
-            <span class="cover__description-text"
-              >Аукцион вещей, в которые никто не верил</span>
+        <div class="cover__description">
+            <p class="cover__description-text"
+              >Аукцион вещей, в которые никто не верил
+            </p>
             <button name="button" class="bet-button">сделать ставку</button>
-          </span>
-        </h2>
+        </div>
       </section>
 
       <section class="lots">
         <h2 class="lots__heading">лоты</h2>
         <ul class="lots__card-list">
-          <li class="lots__card-list-item card_type_film">
-            <div class="overlay"></div>
+          <li class="lots__card-list-item ">
             <a class="card-link" href="#0">
-              <article class="card">
+              <article class="card card_type_film card_type_position">
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
-                <span class="card__text">
+                <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
-                </span>
+                </p>
               </article>
             </a>
           </li>
 
           <li class="lots__card-list-item">
-            <div class="overlay"></div>
             <a class="card-link" href="#0">
-              <article class="card card_type_book">
+              <article class="card card_type_book card_type_position">
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
-                <span class="card__text">
+                <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
                   рассказывается о 16 июня 1904 года и об истории литературы,
                   начиная с античных времён. И это всё накладывается на
                   эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
                   Джеймса Джойса?
-                </span>
+                </p>
               </article>
             </a>
           </li>
 
           <li class="lots__card-list-item">
-            <div class="overlay"></div>
             <a class="card-link" href="#0">
-              <article class="card card_type_picture">
+              <article class="card card_type_picture card_type_position">
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
-                <span class="card__text">
+                <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
                   котиков... Сколько бы вы на такое поставили, если бы не знали,
                   что это — одна из революционных работ Кандинского?
-                </span>
+                </p>
               </article>
             </a>
           </li>
         </ul>
         <a href="#0" class="lots__look-more-link">посмотреть больше</a>
       </section>
-
+      
       <section class="about">
         <div class="about__column">
           <div class="about__logo">
@@ -136,9 +136,9 @@
               loading="lazy"
             />
           </div>
-          <div>
-            <h4 class="about__title">Об аукционе</h4>
 
+          <div>
+            <h3 class="about__title">Об аукционе</h3>
             <p class="about__text">
               Здесь вы не встретите очередное пафосное собрание невероятно
               дорогого антиквариата. Наши лоты вообще не должны были попасть ни
@@ -146,7 +146,7 @@
               или картина, которую может нарисовать даже ребёнок? Кому нужны все
               эти странные вещи, созданные любителями?
             </p>
-            <p class="about__text about__text_low_margin_top">
+            <p class="about__text about__text_margin">
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и
               непонятые. Когда-то они казались просто неудачными. Но, несмотря
@@ -161,7 +161,7 @@
     </main>
 
     <footer class="footer">
-      <address class="address footer__address_margin">
+      <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
         <p>
@@ -173,15 +173,15 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a>главная</a>
+            <a class="footer__menu-link footer__menu-link_active">главная</a>
           </li>
 
           <li class="footer__menu-list-item">
-            <a href="#0">посмотреть лоты</a>
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
           </li>
 
           <li class="footer__menu-list-item">
-            <a href="#0">об аукционе</a>
+            <a class="footer__menu-link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
